plugins {
    id 'groovy'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
}

version = '0.0.1'
group = 'com.myworldvw'

dependencies {

    testImplementation "org.spockframework:spock-core:2.3-groovy-3.0"

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}

compileTestGroovy {
    options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    // TODO - support non-Linux lib names
    systemProperty "buoy.test.lib.path", new File(parent.projectDir.absoluteFile, "native/build/lib/main/debug/libnative.so").toPath().toString()
    jvmArgs(['--enable-preview'])
}

publishing {
    publications {
        library(MavenPublication) {

            artifactId = 'buoy'

            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}